--- a/public/css/responsiveCart.css
+++ b/public/css/responsiveCart.css
@@ -1,16 +1,112 @@
-@import "compass/css3";
+/* @import "compass/css3";
 
 /*
 I wanted to go with a mobile first approach, but it actually lead to more verbose CSS in this case, so I've gone web first. Can't always force things...
 
 Side note: I know that this style of nesting in SASS doesn't result in the most performance efficient CSS code... but on the OCD/organizational side, I like it. So for CodePen purposes, CSS selector performance be damned.
-*/
+*/ 
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Zilla Slab', serif;
+}
+nav{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+nav .top-part,nav .bottom-part{
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #8e8c8c;
+}
+nav .top-part .socials{
+  display: flex;
+}
+nav .top-part .socials div{
+  height: 30px;
+  border-radius: 5px;
+  width: 30px;
+  display: flex;
+  margin: 5px;
+  justify-content: center;
+  align-items: center;
+  background-color: #eee;
+}
+nav .top-part .socials .fa-brands{
+  color: #8e8c8c;
+  font-size: 20px;
+}
 
-/* Global settings */
-$color-border: #eee;
-$color-label: #aaa;
-$font-default: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$font-bold: 'HelveticaNeue-Medium', 'Helvetica Neue Medium';
+nav .top-part .seller b{
+  font-family: 'Berkshire Swash', cursive;
+  color: #3C91E6;
+}
+nav .top-part .seller a{
+  color: #3C91E6;
+
+}
+nav .top-part .account{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav .top-part .account>*{
+  margin: 2px;
+}
+nav .bottom-part .logo{
+  display: flex;
+  align-items: center;
+  font-family: 'Berkshire Swash', cursive;
+  color: #3C91E6;
+  font-size: 25px;
+}
+nav .bottom-part .search-div{
+  width: 50vw;
+  height: 30px;
+  border: 1px solid #cfcfcf;
+  border-radius: 10px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+nav .bottom-part .search-div input{
+  border: none;
+}
+nav .bottom-part .search-div input::placeholder{
+  font-size: 18px;
+}
+nav .bottom-part .controls{
+  font-size: 20px;
+}
+nav .bottom-part .controls >*{
+  margin: 2px;
+}
+nav .most-bottom-part{
+padding: 10px 0;
+}
+nav .most-bottom-part ul{
+display: flex;
+justify-content: center;
+}
+nav .most-bottom-part ul #active{
+border-bottom: 2px solid #3C91E6;
+}
+nav .most-bottom-part ul li{
+list-style: none;
+margin: 0 20px;
+}
+nav .most-bottom-part ul li a{
+text-decoration: none;
+color: #000;
+}
+
 
 
 /* Global "table" column settings */
@@ -24,21 +120,15 @@ $font-bold: 'HelveticaNeue-Medium', 'Helvetica Neue Medium';
 
 /* This is used as the traditional .clearfix class */
 .group:before,
-.group:after {
+.group:after ,.shopping-cart::before,.shopping-cart::after,.column-labels::before,.column-labels::after,.product::before,.product::after.totals-item::before,.totals-item::after{
     content: '';
     display: table;
 } 
-.group:after {
+.group:after,.shopping-cart::before,.shopping-cart::after,.column-labels::before,.column-labels::after,.product::before,.product::after.totals-item::before,.totals-item::after {
     clear: both;
 }
-.group {
+.group,.shopping-cart::before,.shopping-cart::after,.column-labels::before,.column-labels::after,.product::before,.product::after.totals-item::before,.totals-item::after {
     zoom: 1;
-}
-
-
-/* Apply clearfix in a few places */
-.shopping-cart, .column-labels, .product, .totals-item {
-  @extend .group;
 }
 
 
@@ -49,18 +139,13 @@ $font-bold: 'HelveticaNeue-Medium', 'Helvetica Neue Medium';
 
 
 /* Body/Header stuff */
-body {
-  padding: 0px 30px 30px 20px;
-  font-family: $font-default;
-  font-weight: 100;
-}
 
 h1 {
   font-weight: 100;
 }
 
 label {
-  color: $color-label;
+  color: #aaa;
 }
 
 .shopping-cart {
@@ -69,16 +154,14 @@ label {
 
 
 /* Column headers */
-.column-labels {
-  label {
-    padding-bottom: 15px;
-    margin-bottom: 15px;
-    border-bottom: 1px solid $color-border;
-  }
-  
-  .product-image, .product-details, .product-removal {
-    text-indent: -9999px;
-  }
+
+.column-labels label {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #eee;
+}
+.column-labels .product-image, .product-details, .product-removal {
+  text-indent: -9999px;
 }
 
 
@@ -86,74 +169,61 @@ label {
 .product {
   margin-bottom: 20px;
   padding-bottom: 10px;
-  border-bottom: 1px solid $color-border;
+  border-bottom: 1px solid #eee;
   
-  .product-image {
-    text-align: center;
-    img {
-      width: 100px;
-    }
-  }
-  
-  .product-details {
-    .product-title {
-      margin-right: 20px;
-      font-family: $font-bold;
-    }
-    .product-description {
-      margin: 5px 20px 5px 0;
-      line-height: 1.4em;
-    }
-  }
-  
-  .product-quantity {
-    input {
-      width: 40px;
-      
-    }
-  }
-  
-  .remove-product {
-    border: 0;
-    padding: 4px 8px;
-    background-color: #c66;
-    color: #fff;
-    font-family: $font-bold;
-    font-size: 12px;
-    border-radius: 3px;
-  }
-  
-  .remove-product:hover {
-    background-color: #a44;
-  }
 }
 
+.product .remove-product:hover {
+  background-color: #a44;
+}
+.product .product-quantity input {
+  width: 40px;
+}
+.product .remove-product {
+  border: 0;
+  padding: 4px 8px;
+  background-color: #c66;
+  color: #fff;
+  font-weight: bold;
+  font-size: 12px;
+  border-radius: 3px;
+}
+
+.product .product-image {
+  text-align: center;
+}
+.product .product-image img {
+  width: 100px;
+}
+.product  .product-details .product-description {
+  margin: 5px 20px 5px 0;
+  line-height: 1.4em;
+}
+.product .product-details .product-title {
+  margin-right: 20px;
+  font-weight: 800;
+}
 
 /* Totals section */
-.totals {
-  .totals-item {
-    float: right;
-    clear: both;
-    width: 100%;
-    margin-bottom: 10px;
-    
-    label {
-      float: left;
-      clear: both;
-      width: 79%;
-      text-align: right;
-    }
-    
-    .totals-value {
-      float: right;
-      width: 21%;
-      text-align: right;
-    }
-  }
-  
-  .totals-item-total {
-    font-family: $font-bold;
-  }
+.totals .totals-item {
+  float: right;
+  clear: both;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.totals .totals-item label {
+  float: left;
+  clear: both;
+  width: 79%;
+  text-align: right;
+}
+.totals .totals-item .totals-value {
+  float: right;
+  width: 21%;
+  text-align: right;
+}
+.totals .totals-item-total {
+  font-weight: bold;
 }
 
 .checkout {
@@ -177,7 +247,7 @@ label {
   .shopping-cart {
     margin: 0;
     padding-top: 20px;
-    border-top: 1px solid $color-border;
+    border-top: 1px solid #eee;
   }
   
   .column-labels {
@@ -187,9 +257,11 @@ label {
   .product-image {
     float: right;
     width: auto;
-    img {
-      margin: 0 0 10px 10px;
-    }
+    
+  }
+
+  .product-image img {
+    margin: 0 0 10px 10px;
   }
   
   .product-details {
@@ -205,9 +277,10 @@ label {
   
   .product-quantity {
     width: 100px;
-    input {
-      margin-left: 20px;
-    }
+  }
+
+  .product-quantity input {
+    margin-left: 20px;
   }
   
   .product-quantity:before {
@@ -243,16 +316,180 @@ label {
   .product .product-line-price:before {
     content: 'Item Total: $';
   }
-  
-  .totals {
-    .totals-item {
-      label {
-        width: 60%;
-      }
-      
-      .totals-value {
-        width: 40%;
-      }
-    }
+  .totals .totals-item label{
+      width: 60%;
   }
+  
+  .totals .totals-value {
+    width: 40%;
+  }
+  
+}
+
+.footer .container{
+	max-width: 1170px;
+	margin:auto;
+}
+.footer .row{
+	display: flex;
+	flex-wrap: wrap;
+}
+.footer ul{
+	list-style: none;
+}
+.footer{
+  margin-top: 20px;
+	background-color: #24262b;
+    padding: 70px 0;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #3C91E6;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(255,255,255,0.2);
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
+}
+}
+
+
+.newsletter-section {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background-size: cover;}
+.newsletter-section   .newsletter-content {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  text-align: center;
+}
+.newsletter-section   .newsletter-content .text {
+      margin-bottom: 20px;
+      font-size: 14px;
+      color: rgba(0, 0, 0, 0.5);
+  }
+.newsletter-section   .newsletter-content .small-text {
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.5);
+}
+.newsletter-section   .newsletter-content .big-text {
+  margin-bottom: 20px;
+  font-size: 22px;
+  line-height: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 0 30px;
+  
+}
+.newsletter-section   .newsletter-content .form {
+  display: flex;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+.newsletter-section   .newsletter-content .form   input {
+      width: 200px;
+      height: 40px;
+      border-radius: 0;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+      padding: 0 12px;
+      font-size: 16px;
+      outline: none;
+  }
+.newsletter-section   .newsletter-content .form button {
+  outline: 0;
+  border: 0;
+  height: 40px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 16px;
+  color: white;
+  background: #3C91E6;
+  border-bottom: 3px solid #3C91E6;
+  
+}
+      
+.social-icons {
+  display: flex;
+  gap: 10px;
+}
+.social-icons .icon {
+  width: 30px;
+  height: 30px;
+  background: rgba(0, 0, 0, 0.8);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
 }
