--- a/public/css/user.css
+++ b/public/css/user.css
@@ -300,6 +300,9 @@ nav .most-bottom-part ul li a{
 .info-div>*{
   margin-top: 10px;
 }
+span.red{
+  color: red;
+}
 
 /*BRANDS SECTION*/
 .brands-section{
