--- a/public/css/user.css
+++ b/public/css/user.css
@@ -200,6 +200,10 @@ nav .most-bottom-part ul li a{
   justify-content: center;
   flex-wrap: wrap;
 }
+.categories-div a{
+  text-decoration: none;
+  color: #000;
+}
 .categories-div >*{
   margin: 10px;
 }
@@ -250,6 +254,28 @@ nav .most-bottom-part ul li a{
   top: 0;
   right: 0;
 }
+.cart-popup-success{
+	color: green;
+    position: fixed;
+	top: 60px;
+	right: 20px;
+	background-color: #ffffff;
+	padding: 10px;
+	border-radius: 5px;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+	z-index: 999;
+  }
+  .cart-popup-error{
+	color: red;
+    position: fixed;
+	top: 60px;
+	right: 20px;
+	background-color: #ffffff;
+	padding: 10px;
+	border-radius: 5px;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+	z-index: 999;
+  }
 .top-picks .img-div .cart:hover{
   cursor: pointer;
 }
@@ -733,6 +759,7 @@ span.red{
   justify-content: space-between;
   padding: 10px;
   border-bottom: 1px solid #99999a;
+  color: #3C91E6;
 
 }
 .cart-table th{
@@ -777,12 +804,19 @@ span.red{
   padding: 10px 15px;
   display: flex;
   align-items: center;
+  border: none;
 }
-.remove-icon{
+.remove-tag:hover{
+  cursor: pointer;
+}
+.remove-tag .fa-solid{
   margin-left: 5px;
 }
-.remove-tag h5,.remove-icon{
+.remove-tag h5,.remove-tag .fa-solid{
   color: #99999a;
+}
+.remove-tag .fa-solid{
+  font-size: 13px;
 }
 .quantity-div{
   display: flex;
@@ -793,14 +827,22 @@ span.red{
   padding: 5px 15px;
   margin: 0 5px;
 }
+.quantity-div button{
+  background-color: transparent;
+  padding: 5px;
+  border: 1px solid #99999a;
+}
 .quantity,.price,.total{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-#quantity-control{
-  font-size: 23px;
+#quantity-control,#quantity-controll{
+  font-size: 20px;
   font-weight: bolder;
+}
+#quantity-control:hover,#quantity-controll{
+  cursor: pointer;
 }
 .order-summary{
   width: 26vw;
@@ -862,6 +904,9 @@ span.red{
   border-bottom: 1px solid #008080;
 }
 @media(max-width: 767px){
+  *{
+    overflow-x: hidden;
+  }
   .cart-items{
     display: flex;
     flex-direction: column;
