--- a/public/css/user.css
+++ b/public/css/user.css
@@ -988,5 +988,67 @@ span.red{
   justify-self: center;
   align-items: center;
 }
+/*ORDER CONFIRMATIONS */
+.confirm-order{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.confirm-order form{
+  padding: 30px;
+  background-color: #f6f9fe;
+}
+.confirm-order form p{
+  font-size: 13px;
+  color: #99999a;
+}
+.confirm-order .info{
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  margin-top: 10px;
+}
+.confirm-order .info span{
+  font-size: 14px;
+  font-weight: 600;
+}
 
-
+.confirm-order form input{
+  height: 25px;
+  width: 210px;
+  border: none;
+  padding-left: 10px;
+}
+.confirm-order .final-info{
+  margin-bottom: 20px;
+}
+.confirm-order .final-info p{
+  margin-bottom: 20px;
+}
+.confirm-order table h2 {
+  margin-top: 20px;
+  color: #3C91E6;
+}
+.confirm-order table th{
+  padding: 10px;
+}
+.confirm-order table td{
+  font-size: 14px;
+  color: #8e8c8c;
+  padding: 5px;
+}
+.confirm-order .totals{
+  display: flex;
+  justify-content: space-between;
+  margin: 15px 5px;
+}
+.confirm-order .totals span{
+  font-weight: 700;
+}
+.confirm-order button{
+  width: 100%;
+  height: 30px;
+  background-color: #3C91E6;
+  color: white;
+  border: none;
+}
