--- a/public/css/style.css
+++ b/public/css/style.css
@@ -382,19 +382,19 @@ body {
 	justify-content: center;
 	align-items: center;
 }
-#content main .box-info li:nth-child(1) .bx {
+#content main .box-info a:nth-child(1) .bx {
 	background: var(--light-blue);
 	color: var(--blue);
 }
-#content main .box-info li:nth-child(2) .bx {
+#content main .box-info a:nth-child(2) .bx {
 	background: var(--light-yellow);
 	color: var(--yellow);
 }
-#content main .box-info li:nth-child(4) .bx {
+#content main .box-info a:nth-child(4) .bx {
 	background: var(--light-orange);
 	color: var(--orange);
 }
-#content main .box-info li:nth-child(3) .bx {
+#content main .box-info a:nth-child(3) .bx {
 	background: var(--light-blue);
 	color: var(--blue);
 }
